RESOLVED FIXED216619
REGRESSION(r266844) [ BigSur ] http/tests/security/webaudio-render-remote-audio-allowed-crossorigin.html is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=216619
Summary REGRESSION(r266844) [ BigSur ] http/tests/security/webaudio-render-remote-aud...
Jer Noble
Reported 2020-09-16 13:13:12 PDT
REGRESSION(r266844) [ BigSur ] http/tests/security/webaudio-render-remote-audio-allowed-crossorigin.html is a constant failure
Attachments
Patch (3.33 KB, patch)
2020-09-16 13:23 PDT, Jer Noble
no flags
Patch (3.52 KB, patch)
2020-09-16 13:35 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-09-16 13:23:00 PDT
Jer Noble
Comment 2 2020-09-16 13:23:41 PDT
Alexey Proskuryakov
Comment 3 2020-09-16 13:26:09 PDT
Comment on attachment 408949 [details] Patch r+, but the patch doesn't apply to trunk, so cannot be EWS processed in the current form.
Jer Noble
Comment 4 2020-09-16 13:35:04 PDT
EWS
Comment 5 2020-09-16 14:56:08 PDT
Committed r267162: <https://trac.webkit.org/changeset/267162> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408951 [details].
Note You need to log in before you can comment on or make changes to this bug.